--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  border-radius: border-box;
+  font-family: 'Roboto Mono', monospace;
+  justify-content: center;
+}
+
+.app {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.app__navbar {
+  background-color: #078fff;
   color: white;
+  padding: 15px;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.app__linkBox {
+  padding: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__linkBox input {
+  padding: 20px;
+  width: 80%;
+  font-size: 20px;
+  border-radius: 8px;
+}
+
+.container-ul {
+  padding-top: 15px;
+  display: flex;
+  justify-content: center;
+}
+
+.container-ul li {
+  display: inline;
+  align-items: center;
+}
+
+.container-ul ul li{
+  padding: 0px 15px 0px 15px;
+}
+
+a:hover{
+  cursor: pointer;
+}
+
+a:active {
+  color: black;
+}
+
+a:visited {
+  color: black;
+}
+
+a {
+  font-size: 16px;
+  text-decoration: none;
+  font: bold;
+  color: black;
 }
